# Pkrcrnchr

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lib/penum/: CMakeLists.txt  CardDistribution.cpp  CardDistribution.h  Odometer.h  PartitionEnumerator.h  ShowdownEnumerator.cpp  ShowdownEnumerator.h  SimpleDeck.hpp
src/lib/peval/: CMakeLists.txt  Card.cpp  Card.h  CardSet.cpp  CardSet.h  PokerEvaluation.cpp  PokerEvaluation.h  PokerEvaluationTables.h  PokerHandEvaluation.h  PokerHandEvaluator.cpp  PokerHandEvaluator.h  Rank.cpp  Rank.h  Suit.cpp  Suit.h
src/lib/util/: CMakeLists.txt  combinations.h  lastbit.h
src/programs/: CMakeLists.txt
src/programs/ps-eval/: main.cpp
